* Optimize Class.create() and Class#addMethods and switch to using `this._super()`. [Joey Hurst, jddalton, John Resig]
  Note: Backwards compatibility warning.
    - The $super variable is no longer used to access a super's method.
      Intead use `this._super()` in the body of the subclassed method. 

* Rename Object.isOwnProperty() to Object.hasKey() and add Hash#hasKey. [apm, jddalton]

* Remove internal use of the $super variable in Fuse. [jddalton]

* Allow Element.addMethods() and Event.addMethods() to add `toString` and other special methods. [jddalton]
  Note: Additions to HTMLElement.prototype will be ignored if HTML<tagName>Element.prototype has an existing 
  property with the same name. Extending elements by tagName will get around the issue.
  
* Ensure correct use of the delete operator. [jddalton]

* Allow IE8 to utilize the Element and Event prototype objects. [Andrew Dupont, jddalton]

* Add Event.addMethods() to allow adding methods to Event instances. [Prototype LH #203] [jddalton, Ken Snyder]

* Cleanup Fuse.Browser.Feature and Fuse.Browser.Bug and rename the Tester `add` and `remove` methods to `set` and `unset`. [jddalton]

* Fix private method nodeListSlice() causing Safari 2 to enter an infinite loop. [jddalton]

* Ensure Object.keys() and Object.values() accept function objects. [jddalton, kangax]

* Add `prototype` to the list of properties to iterate over in the IE fork of Object._each(). [jddalton]

* Add Object.isPrimitive(). [kangax]

* Simplify Element#readAttribute and Element#writeAttribute by using element.getAttributeNode() as the default method of reading attributes. [Diego Perini, jddalton]
  Note: Backwards compatibility warning.
   - Renamed Element._attributeTranslations to Element.Attribute
   - Element.Attribute methods `_setAttrNode`, `_flag`, `_getAttr`, `_getAttrNode`, and `_getEv` are private and renamed
